--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "Now which method is better? Completly depends on you. You can attempt to visualize the data and draw lines or you can train and predict a logistic regression model.\n",
     "\n",
-    "## The better model for linearly separable data\n",
+    "### The better model for linearly separable data\n",
     "\n",
     "Do not underestimate the neural network. It can still learn the linear boundary. However it can also learn an uncessarily curved boundary sepearting the classes.\n",
     "\n",
@@ -60,13 +60,16 @@
    "id": "d8f88dce",
    "metadata": {},
    "source": [
-    "# The data\n",
+    "## The data\n",
     "\n",
     "The make moons library presents the data usually in crescent shapes, where each class are their own crescents. For now we can focus on two classes.\n",
     "\n",
+    "\n",
     "We also will just focus on 2 features.\n",
     "\n",
+    "\n",
     "Remember, if we have n-features, then our data exists in an n-dimensional space.\n",
+    "\n",
     "\n",
     "We can visualize up to 3 features into a 3-dimensional space, however beyond 3, we cannot visualize beyond 3D. The geometry still exists, don't worry, we just cannot see it.\n",
     "\n",
@@ -82,7 +85,9 @@
     "\n",
     "Also one more thing before we move on, inorder for both features to show importance to identifying the data point's correct class, they need to be in similar magnitudes. If one feature is scaling in the millions and the second feature is scaling in the tens, then the first feature will have such a bigger impact on the conclusions. So to prevent this, we need to use a standard scaling to normalize the values for each feature to a 0 to 1 range, instead of a range for example -15002008 to 3000200. Do not worry, the data is not lost, just transformed. \n",
     "\n",
+    "\n",
     "This transformation is very useful to many algorithms, not just neural nets. They can perform better because the features contribute equally to the model's performance, just as how they should. Ofcourse models can determine that some features are obsolete as it trains, but here atleast we give the features an equal chance to see if they are relevant.\n",
+    "\n",
     "\n",
     "The standard scalar will also come back soon in the neural net. (For those who already know, its the gradient descent. With normalized features, convergence can happen much faster than without.)"
    ]
@@ -187,9 +192,13 @@
    "metadata": {},
    "source": [
     "hidden layer sizes: how wide/deep the network is\n",
+    "\n",
     "activation: the nonlinear function inside the network\n",
+    "\n",
     "solver: how the neural network learns\n",
+    "\n",
     "alpha: helps prevents overfitting\n",
+    "\n",
     "max_iter: the max number of training step iterations."
    ]
   },
