--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -204,12 +204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2c775679",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.nueral_network import MLPClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "\n",
     "mlp = MLPClassifier(\n",
     "    hidden_layer_sizes=(16,16), #We are gonna have 2 hidden layers, each with size of 16 units\n",
@@ -227,7 +227,205 @@
    "cell_type": "markdown",
    "id": "6ff8ff74",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Train and evaluate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c7d6a14c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:\n",
+      "train: 0.9478571428571428\n",
+      "val  : 0.93\n",
+      "test : 0.95\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Train\n",
+    "mlp.fit(X_train_s, y_train)\n",
+    "\n",
+    "# Predict\n",
+    "train_pred = mlp.predict(X_train_s)\n",
+    "val_pred   = mlp.predict(X_val_s)\n",
+    "test_pred  = mlp.predict(X_test_s)\n",
+    "\n",
+    "print(\"Accuracy:\")\n",
+    "print(\"train:\", accuracy_score(y_train, train_pred))\n",
+    "print(\"val  :\", accuracy_score(y_val, val_pred))\n",
+    "print(\"test :\", accuracy_score(y_test, test_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10ecb9a8",
+   "metadata": {},
+   "source": [
+    "## Breaking down the structure of a neural network\n",
+    "\n",
+    "The neural net is bascially just input -> hidden -> output\n",
+    "\n",
+    "For our neural net,\n",
+    "\n",
+    "\n",
+    "Input layer: we have 2 neurons (due to having 2 features), \n",
+    "\n",
+    "\n",
+    "Hidden layer 1: 16 neurons\n",
+    "\n",
+    "\n",
+    "Hidden layer 2: 16 neurons\n",
+    "\n",
+    "\n",
+    "Output layer: 1 neuron (The binary classification)\n",
+    "\n",
+    "2->16->16->1\n",
+    "\n",
+    "\n",
+    "The width of a neural network is the number of neurons in a layer. Since we are choosing 16 neurons for each hidden layer, this will be the width.\n",
+    "\n",
+    "Keep in mind that more neurons means more flexibility, more modeling of complex patterns, and there is a higher risk of overfitting.\n",
+    "\n",
+    "\n",
+    "Deep/depth is the number of hidden layers. In our example, we are using 2 hidden layers.\n",
+    "If we had more layers, we can model more complex compositions of patterns, but then training can take longer, and results may not be worth the training time and performance trade off.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Now moving onto the activation function that we used. Each neuron computes a localized prediction by calculating a weighted sum of its inputs plus a bias term. \n",
+    "\n",
+    "$$ z = w_1 x_1 + w_2 x_2 + b $$\n",
+    "\n",
+    "\n",
+    "After this a nonlinear activation function is applied. This operation transforms input data into a representation that informs the overall network's final output. \n",
+    "\n",
+    "\n",
+    "Without activation functions, the whole network collapses into one linear function of the weights and biases of each neuron, no matter how many layers you stack.\n",
+    "\n",
+    "$$\n",
+    "\\text{ReLU}(z) = \\max(0, z)\n",
+    "$$\n",
+    "\n",
+    "ReLU is the activation function we used. ReLU is a rectified linear unit.\n",
+    "\n",
+    "$$\n",
+    "\\text{ReLU}(z) = \n",
+    "\\begin{cases} \n",
+    "z & \\text{if } z > 0 \\\\\n",
+    "0 & \\text{if } z \\leq 0 \n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "This activation function introduces non-linearity to the model, as you can see.\n",
+    "\n",
+    "\n",
+    "Moving onto the solver, in our case being adam.\n",
+    "\n",
+    "The solver is how the network learns. Training menas adjusting weights to reduce mistakes. The solver is responsible for computing how wrong the network currently is. It is also responsible for adjusting weights to try to minimize this error. The adjustments depends but they are usually not too large when there is a hint of convergence. It is repeated many times.\n",
+    "\n",
+    "\n",
+    "Adam in particular is a modern optimization method. Think of it as a smart way of adjusting weights step by step. We will discuss more about optimization soon, but now understand that solver = learning rule.\n",
+    "\n",
+    "\n",
+    "Our next definition is alpha. This is the regularization strength. Regularization discourages the network from using very large weights. Why this is important? If weights become huge the model can fit tiny noise without it noticing, and it overfits more frequently by summarizing more than generalization.\n",
+    "\n",
+    "\n",
+    "Alpha adds a penalty for larger weights.\n",
+    "- If there is a small alpha -> weak penalty\n",
+    "- If there is a large alpha -> strong penalty\n",
+    "\n",
+    "\n",
+    "And finaly the max iterations. This is pretty straightforward. It limits how many times the algorithm loops through learning.\n",
+    "\n",
+    "\n",
+    "Based on what we learned, each iteration computes predictions, measures error, and updates weights.\n",
+    "\n",
+    "\n",
+    "More iterations may result in more learning opportunity, but it can take more time. Less iterations may lead to the model stopping before it's finished learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca5f0062",
+   "metadata": {},
+   "source": [
+    "### The structure\n",
+    "Input (2 features)\n",
+    "    \n",
+    "\n",
+    "Hidden layer (16 ReLU neurons)\n",
+    "\n",
+    "\n",
+    "Hidden layer (16 ReLU neurons)\n",
+    "\n",
+    "\n",
+    "Output neuron"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5344dfe",
+   "metadata": {},
+   "source": [
+    "### What does learning actually mean?\n",
+    "\n",
+    "You may be confused on what learning actually means. We talked about when we spoke about the adam optimizer/solver.\n",
+    "\n",
+    "\n",
+    "A neural net has:\n",
+    "- weights\n",
+    "- predictions\n",
+    "- errors\n",
+    "Learning means adjusting the weights to reduce error. This adjustment process is called optimization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "052781fd",
+   "metadata": {},
+   "source": [
+    "### Optimization\n",
+    "Optimization is finding the set of weights that minimizes the error.\n",
+    "\n",
+    "\n",
+    "Mathematically, we define a loss function which measures the wrongness. \n",
+    "Then we are to find the weights that make loss as small as possible. \n",
+    "\n",
+    "\n",
+    "You are at the top of a hill (high error)\n",
+    "\n",
+    "\n",
+    "You want to walk downhill (lower error)\n",
+    "\n",
+    "\n",
+    "Optimization is the strategy for stepping downhill\n",
+    "\n",
+    "\n",
+    "Adam (your solver) is just one strategy for stepping downhill."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a627ac00",
+   "metadata": {},
+   "source": [
+    "### Epochs\n",
+    "\n",
+    "An epoch is a single full pass through the training dataset.\n",
+    "Since we have 1400 training samples, and one epoch has passed the network has seen all 1400 once. If you train for 10 epochs, then the neural net has seen the entire dataset 10 times.\n",
+    "\n",
+    "\n",
+    "Iterations and epoch can be correlated to one epoch in our code. "
+   ]
   }
  ],
  "metadata": {
