Finished, want to talk more about hyperparams, and that will be the end of this notebook

--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -653,7 +653,80 @@
    "cell_type": "markdown",
    "id": "5fccc68d",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Hyper Parameters\n",
+    "\n",
+    "Hyperparameters are settings you choose before training. Each model has different hyperparameters. (i.e. random forests have number of trees)\n",
+    "\n",
+    "\n",
+    "They are not learned like weights, hyper parameters are chosen\n",
+    "\n",
+    "\n",
+    "You may believe trying random stuff manually and seeing what works is a good way of tuning.\n",
+    "\n",
+    "But this can lead to bias, overfitting of your validation set, and inconsistent results.\n",
+    "\n",
+    "\n",
+    "What you should do is focus on systematic methods. And more advanced methods.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "667a2600",
+   "metadata": {},
+   "source": [
+    "Here are 3 common methods:\n",
+    "\n",
+    "#### Method 1\n",
+    "Grid search\n",
+    "\n",
+    "\n",
+    "A systematic approach where you can define a grid of ranges. Then all combinations are tried. It's a brute force structured method.\n",
+    "\n",
+    "#### Method 2\n",
+    "Random Search\n",
+    "\n",
+    "\n",
+    "This is often better than grid search. We will go into specifics soon.\n",
+    "\n",
+    "#### Method 3\n",
+    "This isn't one method, but smarter and more advanced methods\n",
+    "- Bayesian Optimization\n",
+    "- Hyperband\n",
+    "- Optuna\n",
+    "We will cover these in another notebook :) You should be excited to learn these methods, it will help you produce the best results as well save time.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a3f68bb",
+   "metadata": {},
+   "source": [
+    "### How to choose ranges?\n",
+    "This is where intuition and data understanding matters\n",
+    "\n",
+    "\n",
+    "#### Hidden Layers Size\n",
+    "If you notice that your training accuracy is very low, then your model is underfitting.\n",
+    "\n",
+    "\n",
+    "Try increasing the width or depth by increasing the amount of hidden layers or \n",
+    "\n",
+    "\n",
+    "And if you notice that training accuracy is high, but the validation score is low, then your model is overfitting.\n",
+    "\n",
+    "\n",
+    "Try reducing the size or increase your regularization parameter.\n",
+    "\n",
+    "#### Alpha (Regularization)\n",
+    "If you are over fitting, increase the alpha. If you are underfitting, decrease alpha\n",
+    "\n",
+    "#### Learn Rate\n",
+    "If training loss decreases really slowly, increase the learning rate.\n",
+    "\n",
+    "\n",
+    "If training jumps wildly, decrease the learning rate."
+   ]
   }
  ],
  "metadata": {
